--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="коворкинг, коты, котики, работа, бронирование, учеба">
     <title>придумать</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
 <body>
     <nav>
@@ -14,11 +14,11 @@
             <label for="responsive_menu">Menu <span id="menu_icon"></span></label>
             <div id="overlay"></div>
             <ul>
-                <li><a href="pages/main.html">Главная</a></li>
-                <li><a href="pages/reservation.html">Бронирование</a></li>
-                <li><a href="pages/cats.html">Наши котики</a></li>
-                <li><a href="pages/reviews.html">Отзывы</a></li>
-                <li><a href="pages/registration.html ">Регистрация</a></li>
+                <li><a href="main.html">Главная</a></li>
+                <li><a href="reservation.html">Бронирование</a></li>
+                <li><a href="cats.html">Наши котики</a></li>
+                <li><a href="reviews.html">Отзывы</a></li>
+                <li><a href="registration.html ">Регистрация</a></li>
             </ul>
             <ul id="social_media">
                 <li> <a href=""> <i class="fab fa-telegram"></i> </a> </li>
