add: save to localStorage

--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <a class="logo" href="index.html"> <img src="photos/logo.jpg" alt="kkkuusPlace"> </a> 
-        <a class="logo" href="index.html"> kkkuusPlace </a>
+        <a class="logo" href="index.html"> <img src="photos/logo.jpg"> </a> 
+        <a class="logo" id="text_logo" href="index.html"> kkkuusPlace</a>
         <nav>
             <ul>
                 <li><a href='' id="active">Главная</a></li>
