--- a/reservation.html
+++ b/reservation.html
@@ -26,7 +26,7 @@
     <main>
         
         <!-- <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. A fuga harum similique voluptatum voluptatem atque iste odit sint ullam aliquid officia, obcaecati, aliquam non deserunt quasi. Illo architecto quisquam reprehenderit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus consectetur, cum velit adipisci sunt beatae numquam voluptates consequuntur reprehenderit molestiae quibusdam id tenetur alias pariatur animi nam, fuga nesciunt officiis!</h1> -->
-        <form action="">
+        <form id="table_form" action="">
             <label for="name">
                 ФИО: <input type="text" id="name">
             </label>
@@ -43,7 +43,7 @@
             <thead>
             <tr>
                 <th>ФИО</th>
-                <th>мероприятие</th>
+                <th>Мероприятие</th>
                 <th>Конктакты для связи</th>
             </tr>
             </thead>
