add: links and white pages

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
+    <script src="js/load.js"></script>
 </head>
 <body>
     <header>
@@ -15,11 +16,11 @@
         <a class="logo" id="text_logo" href="index.html"> kkkuusPlace</a>
         <nav>
             <ul>
-                <li><a href='' id="active">Главная</a></li>
+                <li><a href='index.html' id="active">Главная</a></li>
                 <li><a href='reservation.html'>Бронирование</a></li>
-                <li><a href=''>Наши котики</a></li>
-                <li><a href=''>Отзывы</a></li>
-                <li><a href=''>Регистрация</a></li>
+                <li><a href='cats.html'>Наши котики</a></li>
+                <li><a href='reviews.html'>Отзывы</a></li>
+                <li><a href='registration.html'>Регистрация</a></li>
             </ul>
         </nav>
     </header>
@@ -115,6 +116,6 @@
         <div class="page_load_time"></div>
     </footer>
     <script src="js/slider.js"></script>
-    <script src="js/load.js"></script>
+    <!-- <script src="js/load.js"></script> -->
 </body>
 </html>
