--- a/reservation.html
+++ b/reservation.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reservation.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
+    <script src="js/load.js"></script>
 </head>
 <body>
     <header>
@@ -16,10 +17,10 @@
         <nav>
             <ul>
                 <li><a href='main.html'>Главная</a></li>
-                <li><a href='' id="active">Бронирование</a></li>
-                <li><a href=''>Наши котики</a></li>
-                <li><a href=''>Отзывы</a></li>
-                <li><a href=''>Регистрация</a></li>
+                <li><a href='reservation.html' id="active">Бронирование</a></li>
+                <li><a href='cats.html'>Наши котики</a></li>
+                <li><a href='reviews.html'>Отзывы</a></li>
+                <li><a href='registration.html'>Регистрация</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +54,7 @@
     <footer>
         <div class="page_load_time"></div>
     </footer>
-    <script src="js/load.js"></script>
+    <!-- <script src="js/load.js"></script> -->
     <script src="js/create_table.js"></script>
 </body>
 </html>
