--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="коворкинг, коты, котики, работа, бронирование, учеба">
-    <title>придумать</title>
+    <title>kkkuusPlace - Котоковоркинг</title>
     <link rel="stylesheet" href="css/homepage.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
                 <li><a href="registration.html ">Регистрация</a></li>
             </ul>
             <ul id="social_media">
-                <li> <a href=""> <i class="fab fa-telegram"></i> </a> </li>
-                <li> <a href=""> <i class="fab fa-github"></i> </a> </li>
+                <li> <a href="https://t.me/kkkuus"> <i class="fab fa-telegram"></i> </a> </li>
+                <li> <a href="https://github.com/kkkuus"> <i class="fab fa-github"></i> </a> </li>
             </ul>
         </div>
     </nav>
