add: include FlexSlider

--- a/main.html
+++ b/main.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
     <script src="js/load.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/flexslider.min.css">
+    <link rel="stylesheet" href="css/slider.css">
+
+
 </head>
 <body>
     <header>
@@ -26,15 +31,14 @@
     </header>
     <main>
         <div class="container" id="slider_container">
-            <button class="prev_button">&lt</button>
-            <div class="slider">
-                <div>1Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
-                <div>2Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
-                <div>3Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
-                <div>4Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
+            <div class="flexslider">
+                <ul class="slides">
+                    <li><div>1Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
+                    <li><div>2Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
+                    <li><div>3Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
+                    <li><div>4Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
+                </div>
             </div>
-            
-            <button class="next_button">&gt</button>
         </div>
 
         <h1>Наши котики</h1>
@@ -115,7 +119,17 @@
     <footer>
         <div class="page_load_time"></div>
     </footer>
-    <script src="js/slider.js"></script>
+    <!-- <script src="js/slider.js"></script> -->
     <!-- <script src="js/load.js"></script> -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/jquery.flexslider.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.flexslider').flexslider({
+                animation: "slide"
+            });
+        });
+    </script>
 </body>
 </html>
