--- a/main.html
+++ b/main.html
@@ -36,8 +36,8 @@
                     <li><div>1Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
                     <li><div>2Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
                     <li><div>3Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
-                    <li><div>4Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
-                </div>
+                    <li><div>4Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div></li>
+                </ul>
             </div>
         </div>
 
