fix: delete some pages

--- a/main.html
+++ b/main.html
@@ -12,8 +12,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/flexslider.min.css">
     <link rel="stylesheet" href="css/slider.css">
-
-
 </head>
 <body>
     <header>
@@ -23,9 +21,7 @@
             <ul>
                 <li><a href='index.html' id="active">Главная</a></li>
                 <li><a href='reservation.html'>Бронирование</a></li>
-                <li><a href='cats.html'>Наши котики</a></li>
-                <li><a href='reviews.html'>Отзывы</a></li>
-                <li><a href='registration.html'>Регистрация</a></li>
+                <li><a href='registration.html'>Авторизация</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +29,7 @@
         <div class="container" id="slider_container">
             <div class="flexslider">
                 <ul class="slides">
-                    <li><div>1Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
+                    <li><div>Тут должно быть описание, что это такое и еще какая нибудь информация</div>
                     <li><div>2Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
                     <li><div>3Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div>
                     <li><div>4Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officiis quae eos id dolorum nemo, at, quasi alias ea, neque porro et! Dolores suscipit repellendus expedita atque aliquid laudantium reiciendis!</div></li>
@@ -119,9 +115,6 @@
     <footer>
         <div class="page_load_time"></div>
     </footer>
-    <!-- <script src="js/slider.js"></script> -->
-    <!-- <script src="js/load.js"></script> -->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/jquery.flexslider.min.js"></script>
     <script>
